fix poi search zoom